Fixing flexbox layout issue in Safari

--- a/app/assets/stylesheets/galleries.scss
+++ b/app/assets/stylesheets/galleries.scss
@@ -139,12 +139,12 @@
 #gallery-image-page #main-content {
   > .container-fluid {
     height: 90%;
-    display: flex;
-    align-items: center;
   }
 
   #main-image-container {
-    max-height: 100%;
+    display: flex;
+    align-items: center;
+    height: 100%;
   }
 }
 
